@@ -1,3 +1,8 @@
+2009-10-07  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* library/ttk/vistaTheme.tcl: [Bug 2787164] fix size of dropdown
+	arrow on combobox and menubutton for Windows 7.
+
 2009-10-07  Donal K. Fellows  <dkf@users.sf.net>
 
 	* unix/tkUnixScrlbr.c (TkpComputeScrollbarGeometry): [Patch 2088597]:
